# walkup_effect

./: .editorconfig  .gitignore  .prettierignore  README.rst  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg  walkup-effect.code-workspace
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  index.rst
requirements/: base.txt  local.txt
walkup_effect/: conftest.py
walkup_effect/client/: apps.py
walkup_effect/customer/: apps.py
walkup_effect/payments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
walkup_effect/payments/migrations/: 0001_initial.py
walkup_effect/products/: models.py
walkup_effect/products/migrations/: 0001_initial.py
walkup_effect/static/css/: project.css  project.min.css  theme.css
walkup_effect/static/js/: project.js
walkup_effect/static/scss/: _user-variables.scss  _user.scss  project.scss
walkup_effect/templates/: base.html
walkup_effect/templates/.tmp/: base.html  index.html
walkup_effect/templates/admin/: base_site.html
walkup_effect/templates/pages/: about.html  home.html  program.html
walkup_effect/templates/partials/: footer.html  head.html  navbar.html  scripts.html
walkup_effect/templates/payments/: cancelled.html  home.html  payment_form.html  success.html
walkup_effect/users/: admin.py  apps.py  urls.py
walkup_effect/users/api/: serializers.py
walkup_effect/users/migrations/: 0002_auto_20200815_0955.py
walkup_effect/users/tests/: test_drf_urls.py  test_drf_views.py  test_forms.py  (+3 more)
(+6 files in other folders)
