[tool.poetry]
name = "walkup_effect"
version = "0.1.0"
description = "Django app for The Walkup Effect"
authors = ["Cameron Shannon <cameroncshannon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "2020.1"
python-slugify = "4.0.0"
Pillow = "7.1.2"
rcssmin = "1.0.6"
argon2-cffi = "19.2.0"
whitenoise = "5.0.1"
redis = "3.5.0"
hiredis = "1.0.1"
uvicorn = "0.11.5"
gunicorn = "20.0.4"

# Django
# ----------------------------------
django = "^3.1"
django-environ = "0.4.5"
django-model-utils = "4.0.0"
django-allauth = "0.41.0"
django-crispy-forms = "1.9.0"
django-compressor = "2.4"
django-redis = "4.11.0"
djangorestframework = "^3.11"


[tool.poetry.dev-dependencies]
Werkzeug = "1.0.1"
ipdb = "0.13.2"
Sphinx = "3.0.3"
psycopg2-binary = "2.8.5"
watchgod = "0.6"

# Testing
# ----------------------------------
mypy = "0.770"
django-stubs = "1.5.0"
pytest = "5.4.2"
pytest-sugar = "0.9.3"

# Code quality
# ----------------------------------
flake8 = "3.8.2"
flake8-isort = "3.0.0"
coverage = "5.1"
black = "19.10b0"
pylint-django = "2.0.15"
pre-commit = "2.4.0"

# Django
# ----------------------------------
factory-boy = "2.12.0"
django-debug-toolbar = "2.2"
django-extensions = "2.2.9"
django-coverage-plugin = "1.8.0"
pytest-django = "3.9.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
